fixed javascript test

--- a/CS3_AlphaFold_tutorial.ipynb
+++ b/CS3_AlphaFold_tutorial.ipynb
@@ -113,9 +113,13 @@
    "outputs": [],
    "source": [
     "# @title Javascript test { display-mode: \"form\" }\n",
+    "import py3Dmol\n",
     "test_file = f\"{protein_structures}/1ezg.pdb\"\n",
     "view = py3Dmol.view(js='https://3dmol.org/build/3Dmol.js', width = 800, height = 600)\n",
-    "view.addModel(open(test_file,'r').read(),'pdb').show()"
+    "view.addModel(open(test_file,'r').read(),'pdb')\n",
+    "view.setStyle({'model':0},{'cartoon': {'color':'spectrum'}})\n",
+    "view.zoomTo()\n",
+    "view.show()"
    ]
   },
   {
@@ -393,7 +397,8 @@
     "ref_a_aligned = f'{reference_structures}/6WQF_aligned.pdb'\n",
     "\n",
     "align_on_ref(ref_a_file, ref_b_file, 'SV6')\n",
-    "for i in range(5):\n",
+    "n = 2 if only_template_models else 5\n",
+    "for i in range(n):\n",
     "    align_on_ref(f\"{output_path}/ranked_{i}.pdb\", ref_b_file, 'SV6')"
    ]
   },
@@ -408,24 +413,24 @@
     "\n",
     "holo_cartoon_color = \"green\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "apo_cartoon_color = \"orange\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
-    "ligand_color = \"whiteCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "holo_sidechain_color = \"cyanCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "apo_sidechain_color = \"yellowCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
+    "ligand_color = \"white\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "holo_sidechain_color = \"cyan\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "apo_sidechain_color = \"yellow\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "\n",
     "#@markdown Click on any atom to show a label with the residue name, the residue number, and the atom name.<br/>Click a second time on the same atom to hide the label.\n",
     "\n",
     "show_aligned(ref_a_aligned, ref_b_aligned, 'SV6',\n",
     "             model_cartoon_color = apo_cartoon_color,\n",
     "             ref_cartoon_color = holo_cartoon_color,\n",
-    "             ligand_color = ligand_color,\n",
-    "             model_sidecahin_color = apo_sidechain_color,\n",
-    "             ref_sidecahin_color = holo_sidechain_color).show()\n",
+    "             ligand_color = ligand_color+'Carbon',\n",
+    "             model_sidecahin_color = apo_sidechain_color+'Carbon',\n",
+    "             ref_sidecahin_color = holo_sidechain_color+'Carbon').show()\n",
     "plot_chain_legend(name_model = 'Apo', name_ref = 'Holocd ',\n",
     "             model_cartoon_color = apo_cartoon_color,\n",
     "             ref_cartoon_color = holo_cartoon_color,\n",
-    "             ligand_color = ligand_color[:-6],\n",
-    "             model_sidecahin_color = apo_sidechain_color[:-6],\n",
-    "             ref_sidecahin_color = holo_sidechain_color[:-6]).show()"
+    "             ligand_color = ligand_color,\n",
+    "             model_sidecahin_color = apo_sidechain_color,\n",
+    "             ref_sidecahin_color = holo_sidechain_color).show()"
    ]
   },
   {
@@ -440,9 +445,9 @@
     "\n",
     "reference_cartoon_color = \"green\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "AF_model_cartoon_color = \"magenta\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
-    "ligand_color = \"whiteCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "reference_sidechain_color = \"cyanCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "AF_model_sidechain_color = \"purpleCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
+    "ligand_color = \"white\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
+    "reference_sidechain_color = \"cyan\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
+    "AF_model_sidechain_color = \"purple\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
     "\n",
     "\n",
     "\n",
@@ -450,14 +455,14 @@
     "show_aligned(aligned_model, ref_b_aligned, 'SV6',\n",
     "             model_cartoon_color = AF_model_cartoon_color,\n",
     "             ref_cartoon_color = reference_cartoon_color,\n",
-    "             ligand_color = ligand_color,\n",
-    "             model_sidecahin_color = AF_model_sidechain_color,\n",
-    "             ref_sidecahin_color = reference_sidechain_color).show()\n",
+    "             ligand_color = ligand_color+'Carbon',\n",
+    "             model_sidecahin_color = AF_model_sidechain_color+'Carbon',\n",
+    "             ref_sidecahin_color = reference_sidechain_color+'Carbon').show()\n",
     "plot_chain_legend(model_cartoon_color = AF_model_cartoon_color,\n",
     "             ref_cartoon_color = reference_cartoon_color,\n",
-    "             ligand_color = ligand_color[:-6],\n",
-    "             model_sidecahin_color = AF_model_sidechain_color[:-6],\n",
-    "             ref_sidecahin_color = reference_sidechain_color[:-6]).show()"
+    "             ligand_color = ligand_color,\n",
+    "             model_sidecahin_color = AF_model_sidechain_color,\n",
+    "             ref_sidecahin_color = reference_sidechain_color).show()"
    ]
   },
   {
@@ -470,11 +475,11 @@
     "# @title Comparison between the AlphaFold model and the free protein (PDBID: 6WQF) { display-mode: \"form\" }\n",
     "rank_num = 1 #@param [\"1\", \"2\", \"3\", \"4\", \"5\"] {type:\"raw\"}\n",
     "\n",
-    "reference_cartoon_color = \"green\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "reference_cartoon_color = \"orange\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "AF_model_cartoon_color = \"magenta\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
-    "ligand_color = \"whiteCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "reference_sidechain_color = \"cyanCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "AF_model_sidechain_color = \"purpleCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
+    "ligand_color = \"white\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "reference_sidechain_color = \"yellow\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "AF_model_sidechain_color = \"purple\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "\n",
     "aligned_model = f\"{output_path}/ranked_{rank_num - 1}_aligned.pdb\"\n",
     "\n",
@@ -486,9 +491,9 @@
     "             ref_sidecahin_color = reference_sidechain_color).show()\n",
     "plot_chain_legend(model_cartoon_color = AF_model_cartoon_color,\n",
     "             ref_cartoon_color = reference_cartoon_color,\n",
-    "             ligand_color = ligand_color[:-6],\n",
-    "             model_sidecahin_color = AF_model_sidechain_color[:-6],\n",
-    "             ref_sidecahin_color = reference_sidechain_color[:-6]).show()"
+    "             ligand_color = ligand_color,\n",
+    "             model_sidecahin_color = AF_model_sidechain_color,\n",
+    "             ref_sidecahin_color = reference_sidechain_color).show()"
    ]
   },
   {
@@ -586,9 +591,9 @@
     "\n",
     "reference_cartoon_color = \"orange\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "AF_model_cartoon_color = \"magenta\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
-    "ligand_color = \"whiteCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "reference_sidechain_color = \"yellowCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "AF_model_sidechain_color = \"purpleCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
+    "ligand_color = \"white\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "reference_sidechain_color = \"yellow\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "AF_model_sidechain_color = \"purple\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "\n",
     "adrb2_path = 'ADRB2_filter_adrb2'\n",
     "\n",
@@ -602,14 +607,14 @@
     "show_aligned(aligned_model, ref_aligned, 'CAU',\n",
     "             model_cartoon_color = AF_model_cartoon_color,\n",
     "             ref_cartoon_color = reference_cartoon_color,\n",
-    "             ligand_color = ligand_color,\n",
-    "             model_sidecahin_color = AF_model_sidechain_color,\n",
-    "             ref_sidecahin_color = reference_sidechain_color).show()\n",
+    "             ligand_color = ligand_color+'Carbon',\n",
+    "             model_sidecahin_color = AF_model_sidechain_color+'Carbon',\n",
+    "             ref_sidecahin_color = reference_sidechain_color+'Carbon').show()\n",
     "plot_chain_legend(model_cartoon_color = AF_model_cartoon_color,\n",
     "             ref_cartoon_color = reference_cartoon_color,\n",
-    "             ligand_color = ligand_color[:-6],\n",
-    "             model_sidecahin_color = AF_model_sidechain_color[:-6],\n",
-    "             ref_sidecahin_color = reference_sidechain_color[:-6]).show()"
+    "             ligand_color = ligand_color,\n",
+    "             model_sidecahin_color = AF_model_sidechain_color,\n",
+    "             ref_sidecahin_color = reference_sidechain_color).show()"
    ]
   },
   {
@@ -625,10 +630,9 @@
     "\n",
     "reference_cartoon_color = \"green\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "AF_model_cartoon_color = \"magenta\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
-    "ligand_color = \"whiteCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "reference_sidechain_color = \"cyanCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "AF_model_sidechain_color = \"purpleCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "\n",
+    "ligand_color = \"white\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "reference_sidechain_color = \"cyan\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "AF_model_sidechain_color = \"purple\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "pdb_filename = f\"{protein_structures}/{adrb2_path}/ranked_{tag}.pdb\"\n",
     "\n",
     "ref_file = f'{reference_structures}/3P0G.pdb'\n",
@@ -639,14 +643,14 @@
     "show_aligned(aligned_model, ref_aligned, 'P0G',\n",
     "             model_cartoon_color = AF_model_cartoon_color,\n",
     "             ref_cartoon_color = reference_cartoon_color,\n",
-    "             ligand_color = ligand_color,\n",
-    "             model_sidecahin_color = AF_model_sidechain_color,\n",
-    "             ref_sidecahin_color = reference_sidechain_color).show()\n",
+    "             ligand_color = ligand_color+'Carbon',\n",
+    "             model_sidecahin_color = AF_model_sidechain_color+'Carbon',\n",
+    "             ref_sidecahin_color = reference_sidechain_color+'Carbon').show()\n",
     "plot_chain_legend(model_cartoon_color = AF_model_cartoon_color,\n",
     "             ref_cartoon_color = reference_cartoon_color,\n",
-    "             ligand_color = ligand_color[:-6],\n",
-    "             model_sidecahin_color = AF_model_sidechain_color[:-6],\n",
-    "             ref_sidecahin_color = reference_sidechain_color[:-6]).show()"
+    "             ligand_color = ligand_color,\n",
+    "             model_sidecahin_color = AF_model_sidechain_color,\n",
+    "             ref_sidecahin_color = reference_sidechain_color).show()"
    ]
   },
   {
@@ -831,15 +835,14 @@
    "outputs": [],
    "source": [
     "# @title Comparison between the AlphaFold structure and a reference in the active state (PDBID: 3P0G) { display-mode: \"form\" }\n",
-    "rank_num = 1 #@param [\"1\", \"2\", \"3\", \"4\", \"5\"] {type:\"raw\"}\n",
+    "rank_num = 1 #@param [\"1\", \"2\"] {type:\"raw\"}\n",
     "tag = rank_num - 1\n",
     "\n",
     "reference_cartoon_color = \"green\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
-    "AF_model_cartoon_color = \"orange\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
-    "ligand_color = \"whiteCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "reference_sidechain_color = \"cyanCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "AF_model_sidechain_color = \"yellowCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "\n",
+    "AF_model_cartoon_color = \"magenta\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "ligand_color = \"white\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "reference_sidechain_color = \"cyan\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "AF_model_sidechain_color = \"purple\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "pdb_filename = f\"{output_path}/ranked_{tag}.pdb\"\n",
     "aligned_model = pdb_filename.split('.')[0]+'_aligned.pdb'\n",
     "\n",
@@ -848,14 +851,14 @@
     "show_aligned(aligned_model, ref_aligned, 'P0G',\n",
     "             model_cartoon_color = AF_model_cartoon_color,\n",
     "             ref_cartoon_color = reference_cartoon_color,\n",
-    "             ligand_color = ligand_color,\n",
-    "             model_sidecahin_color = AF_model_sidechain_color,\n",
-    "             ref_sidecahin_color = reference_sidechain_color).show()\n",
+    "             ligand_color = ligand_color+'Carbon',\n",
+    "             model_sidecahin_color = AF_model_sidechain_color+'Carbon',\n",
+    "             ref_sidecahin_color = reference_sidechain_color+'Carbon').show()\n",
     "plot_chain_legend(model_cartoon_color = AF_model_cartoon_color,\n",
     "             ref_cartoon_color = reference_cartoon_color,\n",
-    "             ligand_color = ligand_color[:-6],\n",
-    "             model_sidecahin_color = AF_model_sidechain_color[:-6],\n",
-    "             ref_sidecahin_color = reference_sidechain_color[:-6]).show()"
+    "             ligand_color = ligand_color,\n",
+    "             model_sidecahin_color = AF_model_sidechain_color,\n",
+    "             ref_sidecahin_color = reference_sidechain_color).show()"
    ]
   },
   {
