--- a/CS3_AlphaFold_tutorial.ipynb
+++ b/CS3_AlphaFold_tutorial.ipynb
@@ -445,9 +445,9 @@
     "\n",
     "reference_cartoon_color = \"green\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "AF_model_cartoon_color = \"magenta\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
-    "ligand_color = \"white\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "reference_sidechain_color = \"cyan\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "AF_model_sidechain_color = \"purple\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
+    "ligand_color = \"white\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "reference_sidechain_color = \"cyan\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "AF_model_sidechain_color = \"purple\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "\n",
     "\n",
     "\n",
@@ -486,9 +486,9 @@
     "show_aligned(aligned_model, ref_a_aligned, 'GST',\n",
     "             model_cartoon_color = AF_model_cartoon_color,\n",
     "             ref_cartoon_color = reference_cartoon_color,\n",
-    "             ligand_color = ligand_color,\n",
-    "             model_sidecahin_color = AF_model_sidechain_color,\n",
-    "             ref_sidecahin_color = reference_sidechain_color).show()\n",
+    "             ligand_color = ligand_color+'Carbon',\n",
+    "             model_sidecahin_color = AF_model_sidechain_color+'Carbon',\n",
+    "             ref_sidecahin_color = reference_sidechain_color+'Carbon').show()\n",
     "plot_chain_legend(model_cartoon_color = AF_model_cartoon_color,\n",
     "             ref_cartoon_color = reference_cartoon_color,\n",
     "             ligand_color = ligand_color,\n",
@@ -952,7 +952,7 @@
     "use_templates = True # @param {type: 'boolean'}\n",
     "max_seqs = \"default\" # @param [\"default\", \"8:16\", \"16:32\"]\n",
     "\n",
-    "if max_seq != 'default':\n",
+    "if max_seqs != 'default':\n",
     "    max_seq, max_extra_seq = max_seqs.split(':')\n",
     "    max_seq = int(max_seq)\n",
     "    max_extra_seq = int(max_extra_seq)\n",
